使用移动端布局完成任务6

--- a/task5/task5-003.html
+++ b/task5/task5-003.html
@@ -19,7 +19,8 @@
 -->
     <div class="task5-banner">
         <div class="task5-banner-bg">
-            <img src="img/task5-banner-bg003.jpg" alt="task5-banner"/>
+            <!--img zhe li shi yong de shi da tu-->
+            <img src="img/task5-banner-bg002.jpg" alt="task5-banner"/>
         </div>
         <div class="task5-banner-photo"></div>
         <div class="task5-banner-info">
@@ -98,5 +99,6 @@
             <p>电话联系</p>
         </div>
     </div>
+    <script type="text/javascript" src="./task5.js"></script>
 </body>
 </html>
