完成任务7的投票页面

--- a/task7/task7-vote.html
+++ b/task7/task7-vote.html
@@ -47,13 +47,161 @@
         <div class="container vote-numbers">
             <p>点击得票数最多人的头像</p>
             <div class="row">
-
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">水民</p>
+                        <p class="one">1号</p>
+                    </div>
+                    <div class="task7-hover active">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left" :hover>
+                        <p class="name">中间人</p>
+                        <p class="one">2号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">警察</p>
+                        <p class="one">3号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">法官</p>
+                        <p class="one">4号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">抢手</p>
+                        <p class="one">5号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">律师</p>
+                        <p class="one">6号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">水民</p>
+                        <p class="one">1号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">水民</p>
+                        <p class="one">1号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">水民</p>
+                        <p class="one">1号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">水民</p>
+                        <p class="one">1号</p>
+                    </div>
+                    <div class="task7-hover">
+                        <ul>
+                            <li class="hover-one"></li>
+                            <li class="hover-two"></li>
+                            <li class="hover-three"></li>
+                            <li class="hover-four"></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- 最后一个没有加hover -->
+                <div class="vote-numbers-out col-xs-4 col-md-4">
+                    <div class="vote-numbers-left">
+                        <p class="name">水民</p>
+                        <p class="one">8号</p>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div class="footer">ss</div>
-        <div class="footer">ss</div>
-        <div class="footer">ss</div>
+        <div class="task7-footer">
+            <button type="button" class="btn btn-default">
+                <span>投死</span>
+            </button>
+        </div>
+        <!-- <div class="footer">ss</div> -->
     </div>
 
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
