给任务7三个页面添加相互跳转链接

--- a/task7/task7-home.html
+++ b/task7/task7-home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,47 +18,52 @@
       <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-      <section id="home-page-head">
-          <!-- <span class="glyphicon glyphicon-align-justify btn-lg" aria-haspopup="true"></span> -->
-          <button type="button" class="btn btn-default ">
-              <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-          </button>
-      </section>
-      <section id="home-page-body">
-          <div class="page-one">
-              <p>上次游戏：捉鬼猜词版</p>
-              <button type="button" class="btn btn-default ">
-                  <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-              </button>
-          </div>
-          <div class="page-two">
-              <h3>捉鬼游戏</h3>
-              <div class="page-two-versions">
-                  <span>简化版</span>
-                  <p>有1133个用户正在玩此款游戏</p>
-                  <span>猜词版</span>
-                  <p>有1133个用户正在玩此款游戏</p>
-                  <span>白痴版</span>
-                  <p>有1133个用户正在玩此款游戏</p>
-              </div>
-              <button type="button" class="btn btn-default">
-                  <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
-              </button>
-              <div class="pagination">
-                  <span class="active"></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
-              </div>
-          </div>
-      </section>
-      
+</head>
+
+<body>
+    <section id="home-page-head">
+        <!-- <span class="glyphicon glyphicon-align-justify btn-lg" aria-haspopup="true"></span> -->
+        <button type="button" class="btn btn-default ">
+            <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+        </button>
+    </section>
+    <section id="home-page-body">
+        <div class="page-one">
+            <p>上次游戏：捉鬼猜词版</p>
+            <button type="button" class="btn btn-default ">
+                <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+            </button>
+        </div>
+        <div class="page-two">
+            <h3>捉鬼游戏</h3>
+            <div class="page-two-versions">
+                <span>简化版</span>
+                <p>有1133个用户正在玩此款游戏</p>
+                <span>猜词版</span>
+                <p>有1133个用户正在玩此款游戏</p>
+                <span>白痴版</span>
+                <p>有1133个用户正在玩此款游戏</p>
+            </div>
+            <button type="button" class="btn btn-default">
+                <a href="./task7-vote.html">
+                    <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
+                </a>
+                <!-- <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span> -->
+            </button>
+            <div class="pagination">
+                <span class="active"></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </section>
+
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/JavaScript" src="js/task7.js"></script>
-  </body>
+</body>
+
 </html>
