--- a/task7/task7-vote.html
+++ b/task7/task7-vote.html
@@ -198,7 +198,10 @@
         </div>
         <div class="task7-footer">
             <button type="button" class="btn btn-default">
-                <span>投死</span>
+                <a href="./task7-result.html">
+                    <span>投死</span>
+                </a>
+                <!-- <span>投死</span> -->
             </button>
         </div>
         <!-- <div class="footer">ss</div> -->
