--- a/task7/task7-result.html
+++ b/task7/task7-result.html
@@ -26,7 +26,10 @@
             <div class="row">
                 <div class="header-left col-md-3 col-xs-3">
                     <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-home"></span>
+                        <a href="./task7-home.html">
+                            <span class="glyphicon glyphicon-home"></span>
+                        </a>
+                        <!-- <span class="glyphicon glyphicon-home"></span> -->
                     </button>
                 </div>
                 <div class="header-center col-md-6 col-xs-6">游戏结果</div>
