--- a/task7/task7-home.html
+++ b/task7/task7-home.html
@@ -44,12 +44,12 @@
                 <span>白痴版</span>
                 <p>有1133个用户正在玩此款游戏</p>
             </div>
-            <button type="button" class="btn btn-default">
+            <!-- <button type="button" class="btn btn-default"> -->
                 <a href="./task7-vote.html">
                     <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
                 </a>
                 <!-- <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span> -->
-            </button>
+            <!-- </button> -->
             <div class="pagination">
                 <span class="active"></span>
                 <span></span>
