将任务5放到服务器上

--- a/task8/task8-home.html
+++ b/task8/task8-home.html
@@ -86,7 +86,7 @@
                 <span></span>
             </div>
         </section>
-        <section class="task8-introduce public-container">
+        <section class="task8-introduce public-container hidden-xs">
             <div class="container">
                 <div class="row">
                     <div class="introduce-one col-md-3">
