--- a/task8/task8-home.html
+++ b/task8/task8-home.html
@@ -72,7 +72,8 @@
             </div>
         </section>
         <section class="task8-banner">
-            <div class="inner">
+            <!-- 这是之前的轮播图 -->
+            <!-- <div class="inner">
                 <div class="innerwraper"><img src="img/task8-banner-001.jpg" alt="" /></div>
                 <div class="innerwraper"><img src="img/task8-banner-002.png" alt="" /></div>
                 <div class="innerwraper"><img src="img/task8-banner-003.jpg" alt="" /></div>
@@ -84,22 +85,57 @@
                 <span></span>
                 <span></span>
                 <span></span>
+            </div> -->
+            <!-- 这是bootstrap 轮播图 carousel  -->
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators 这部分添加下面轮播小圆点 -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides 这里可放图片、文字h3等 -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="./img/task8-banner-001.jpg" class="img-responsive" alt="...">
+                        <div class="carousel-caption">
+                            <h3>轮播图1</h3>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/task8-banner-002.png" class="img-responsive" alt="...">
+                    </div>
+                    <div class="item">
+                        <img src="./img/task8-banner-003.jpg" class="img-responsive" alt="...">
+                    </div>
+                </div>
+
+                <!-- Controls 这是两边的按钮 -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </section>
-        <section class="task8-introduce public-container hidden-xs">
+        <section class="task8-introduce">
             <div class="container">
-                <div class="row">
-                    <div class="introduce-one col-md-3">
+                <div class="row public-container">
+                    <div class="introduce-one col-md-3 col-xs-12">
                         <div class="introduce-pic-001"></div>
                         <span>高效</span>
                         <p>将五到七年的成长时间，缩短为一年到三年</p>
                     </div>
-                    <div class="introduce-one col-md-3">
+                    <div class="introduce-one col-md-3 col-xs-12">
                         <div class="introduce-pic-002"></div>
                         <span>规范</span>
                         <p>标准的实战教程，不会走弯路</p>
                     </div>
-                    <div class="introduce-one col-md-3">
+                    <div class="introduce-one col-md-3 col-xs-12">
                         <div class="introduce-pic-003"></div>
                         <span>人脉</span>
                         <p>
@@ -107,7 +143,7 @@
                             职脉圈，为以后铺平道路
                         </p>
                     </div>
-                    <div class="introduce-one col-md-3">
+                    <div class="introduce-one col-md-3 col-xs-12">
                         <ul class="ul-one">
                             <li class="introduce-pic-004"></li>
                             <li>12400</li>
@@ -121,13 +157,252 @@
                     </div>
                 </div>
             </div>
-            <div>sss</div>
         </section>
-
+        <section class="task8-howToStudy">
+            <div class="container">
+                <div class="public-container row">
+                    <h3>如何学习</h3>
+                    <div class="task8-howToStudy-one col-md-3 col-xs-6">
+                        <div class="steps">
+                            <span>1</span>
+                        </div>
+                        <p>匹配你现在的个人情况，寻找适合自己的职位</p>
+                        <a href="#"></a>
+                    </div>
+                    <div class="task8-howToStudy-one col-md-3 col-xs-6">
+                        <div class="steps">
+                            <span>2</span>
+                        </div>
+                        <p>了解职业前景薪金待遇、竞争压力等</p>
+                        <a href="#"></a>
+                    </div>
+                    <div class="task8-howToStudy-one col-md-3 col-xs-6">
+                        <div class="steps">
+                            <span>3</span>
+                        </div>
+                        <p>掌握行业内顶级技能、掌握行业内顶级技能</p>
+                        <a href="#"></a>
+                    </div>
+                    <div class="task8-howToStudy-one col-md-3 col-xs-6">
+                        <div class="steps">
+                            <span>4</span>
+                        </div>
+                        <p>查看职业目标任务、掌握行业内顶级技能</p>
+                        <a href="#"></a>
+                    </div>
+                    <div class="task8-howToStudy-one col-md-3 col-xs-6">
+                        <div class="steps">
+                            <span>5</span>
+                        </div>
+                        <p>参考学习资源，掌握技能点，逐个完成任务</p>
+                        <a href="#"></a>
+                    </div>
+                    <div class="task8-howToStudy-one col-md-3 col-xs-6">
+                        <div class="steps">
+                            <span>6</span>
+                        </div>
+                        <p>加入班级，和小伙伴们互帮互助，一起学习</p>
+                        <a href="#"></a>
+                    </div>
+                    <div class="task8-howToStudy-one col-md-3 col-xs-6">
+                        <div class="steps">
+                            <span>7</span>
+                        </div>
+                        <p>选择导师，一路引导，加速自己成长</p>
+                        <a href="#"></a>
+                    </div>
+                    <div class="task8-howToStudy-one col-md-3 col-xs-6">
+                        <div class="steps">
+                            <span>8</span>
+                        </div>
+                        <p>完成职业技能，升级业界大佬</p>
+                        <a href="#"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="task8-students hidden-xs">
+            <div class="container">
+                <div class="public-container row">
+                    <h4>优秀学员展示</h4>
+                    <div class="students-one col-md-3">
+                        <div class="box">
+                            <ul>
+                                <li class="students-photo"></li>
+                                <li class="students-name">
+                                    <p>技术顾问：罗大佑</p>
+                                </li>
+                                <li class="students-state">
+                                    <p>
+                                        百度技术总监：互联网基础服务领域，
+                                        从事虚拟主机、云服务、域名。
+                                        曾任新网高级技术总监，
+                                        负责技术研发、团队管理与建设。
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="students-one col-md-3">
+                        <div class="box">
+                            <ul>
+                                <li class="students-photo"></li>
+                                <li class="students-name">
+                                    <p>技术顾问：罗大佑</p>
+                                </li>
+                                <li class="students-state">
+                                    <p>
+                                        百度技术总监：互联网基础服务领域，
+                                        从事虚拟主机、云服务、域名。
+                                        曾任新网高级技术总监，
+                                        负责技术研发、团队管理与建设。
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="students-one col-md-3">
+                        <div class="box">
+                            <ul>
+                                <li class="students-photo"></li>
+                                <li class="students-name">
+                                    <p>技术顾问：罗大佑</p>
+                                </li>
+                                <li class="students-state">
+                                    <p>
+                                        百度技术总监：互联网基础服务领域，
+                                        从事虚拟主机、云服务、域名。
+                                        曾任新网高级技术总监，
+                                        负责技术研发、团队管理与建设。
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="students-one col-md-3">
+                        <div class="box">
+                            <ul>
+                                <li class="students-photo"></li>
+                                <li class="students-name">
+                                    <p>技术顾问：罗大佑</p>
+                                </li>
+                                <li class="students-state">
+                                    <p>
+                                        百度技术总监：互联网基础服务领域，
+                                        从事虚拟主机、云服务、域名。
+                                        曾任新网高级技术总监，
+                                        负责技术研发、团队管理与建设。
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="students-pagination">
+                        <span class="active"></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="task8-company hidden-xs">
+            <div class="container">
+                <div class="row public-container">
+                    <h4>战略合作企业</h4>
+                    <div class="company-one col-md-2">
+                        <a href="#"></a>
+                    </div>
+                    <div class="company-one col-md-2">
+                        <a href="#"></a>
+                    </div>
+                    <div class="company-one col-md-2">
+                        <a href="#"></a>
+                    </div>
+                    <div class="company-one col-md-2">
+                        <a href="#"></a>
+                    </div>
+                    <div class="company-one col-md-2">
+                        <a href="#"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="task8-friend-link hidden-xs">
+            <div class="container">
+                <div class="public-container row">
+                    <h4>友情链接</h4>
+                    <div class="link-one col-md-2">
+                        <ul>
+                            <li><a href="#">手机软件</a></li>
+                            <li><a href="#">手机软件</a></li>
+                        </ul>
+                    </div>
+                    <div class="link-one col-md-2">
+                        <ul>
+                            <li><a href="#">教师招聘</a></li>
+                            <li><a href="#">教师招聘</a></li>
+                        </ul>
+                    </div>
+                    <div class="link-one col-md-2">
+                        <ul>
+                            <li><a href="#">找工作</a></li>
+                            <li><a href="#">找工作</a></li>
+                        </ul>
+                    </div>
+                    <div class="link-one col-md-2">
+                        <ul>
+                            <li><a href="#">游戏</a></li>
+                            <li><a href="#">游戏</a></li>
+                        </ul>
+                    </div>
+                    <div class="link-one col-md-2">
+                        <ul>
+                            <li><a href="#">购物</a></li>
+                            <li><a href="#">购物</a></li>
+                        </ul>
+                    </div>
+                    <div class="link-one col-md-2">
+                        <ul>
+                            <li><a href="#">培训</a></li>
+                            <li><a href="#">培训</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="task8-public-footer">
+            <div class="container">
+                <div class="row public-container">
+                    <div class="footer-left col-md-4">
+                        <p>技能树--改变你我</p>
+                        <ul>
+                            <li><a href="">关于我们</a></li>
+                            <li><a href="">联系我们</a></li>
+                            <li><a href="">合作企业</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-center col-md-6">
+                        <p>旗下网站</p>
+                        <ul>
+                            <li><a href="">草船云孵化器</a></li>
+                            <li><a href="">最强IT特训营</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="">葡萄藤轻游戏</a></li>
+                            <li><a href="">桌游精灵</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-right col-md-2">
+                        <p>微信公众平台</p>
+                        <div class="weixin"></div>
+                    </div>
+                </div>
+            </div>
+            <p class="rights">Copyright &copy; 2015技能树 www.jnshu.com ALL Rights Reserved | 京ICP备135005880号</p>
+        </section>
     </div>
-
-
-
+    
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
