完成任务8的三个页面

--- a/task6/URL/task6-URL001.html
+++ b/task6/URL/task6-URL001.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>任务六|护工列表页</title>
-    <link rel="stylesheet" type="text/css" href="http://118.126.113.248/jnshu790/CSS-Task/task6/task6-URL.css">
-    <link rel="stylesheet" type="text/css" href="http://118.126.113.248/jnshu790/CSS-Task/task6/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="http://118.126.113.248/jnshu790/CSS-Task/task6/task6-URL001.css">
+    <!-- <link rel="stylesheet" type="text/css" href="http://118.126.113.248/jnshu790/CSS-Task/task6/font-awesome.min.css"> -->
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
     <div id="app">
