--- a/task6/task6-001.html
+++ b/task6/task6-001.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>任务六|护工列表页</title>
     <link rel="stylesheet" type="text/css" href="./task6-001.css">
-    <link rel="stylesheet" type="text/css" href="./font-awesome/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./font-awesome/css/font-awesome.min.css"> -->
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+    <!-- <link type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
 </head>
 <body>
     <div id="app">
