--- a/task8/task8-home.html
+++ b/task8/task8-home.html
@@ -58,8 +58,8 @@
                         <div class="collapse navbar-collapse" id="bs-task8-navbar-collapse-001">
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="active001"><a href="#">首页</a></li>
-                                <li><a href="#">职业</a></li>
-                                <li><a href="#">推荐</a></li>
+                                <li><a href="./task8-job.html">职业</a></li>
+                                <li><a href="./task8-company.html">推荐</a></li>
                                 <li><a href="#">关于</a></li>
                             </ul>
                         </div>
