--- a/task8/task8-home.html
+++ b/task8/task8-home.html
@@ -9,10 +9,11 @@
     <title>任务8：技能树首页</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/task8-public.css" rel="stylesheet" type="text/css">
     <link href="css/task8-home.css" rel="stylesheet" type="text/css">
-
+    <link href="css/task8-ui.css" rel="stylesheet" type="text/css">
     <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
     <!--[if lt IE 9]>
@@ -60,7 +61,20 @@
                                 <li class="active001"><a href="#">首页</a></li>
                                 <li><a href="./task8-job.html">职业</a></li>
                                 <li><a href="./task8-company.html">推荐</a></li>
-                                <li><a href="#">关于</a></li>
+
+                                <!-- ui-search 会影响 boostrap的导航条在 移动端功能 （原因大概在点击 body 隐藏下拉菜单那部分 js代码里 ） --> -->
+                                <li class="ui-search hidden-xs">
+                                    <a href="#" class="ui-search-selected">
+                                        <span class="item">关于我们</span>
+                                        <span class="icon-xiala">&nbsp;</span>
+                                    </a>
+                                    <div class="ui-search-selected-list">
+                                        <a href="#1">关于我们</a>
+                                        <a href="#1">联系我们</a>
+                                        <a href="#1">加入我们</a>
+                                    </div>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
@@ -72,7 +86,31 @@
             </div>
         </section>
         <section class="task8-banner">
-            <!-- 这是之前的轮播图 -->
+
+            <!-- 自定义轮播图 -->
+            <div class="ui-slider-LunBT">
+                <div class="inner">
+                    <div class="innerwraper"><img src="img/task8-banner-001.jpg" alt="" /></div>
+                    <div class="innerwraper"><img src="img/task8-banner-002.png" alt="" /></div>
+                    <div class="innerwraper"><img src="img/task8-banner-003.jpg" alt="" /></div>
+                    <div class="innerwraper"><img src="img/task8-banner-004.png" alt="" /></div>
+                    <div class="innerwraper"><img src="img/task8-banner-001.jpg" alt="" /></div>
+                </div>
+
+                <div class="ui-slider-arrow">
+                    <a href="#l" class="item left">&nbsp;</a>
+                    <a href="#r" class="item right">&nbsp;</a>
+                </div>
+
+                <div class="pagination">
+                    <span class="item active"></span>
+                    <span class="item"></span>
+                    <span class="item"></span>
+                    <span class="item"></span>
+                </div>
+
+            </div>
+
             <!-- <div class="inner">
                 <div class="innerwraper"><img src="img/task8-banner-001.jpg" alt="" /></div>
                 <div class="innerwraper"><img src="img/task8-banner-002.png" alt="" /></div>
@@ -86,16 +124,17 @@
                 <span></span>
                 <span></span>
             </div> -->
-            <!-- 这是bootstrap 轮播图 carousel  -->
+
+            <!-- 这是bootstrap 轮播图 carousel 
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators 这部分添加下面轮播小圆点 -->
+                Indicators 这部分添加下面轮播小圆点 
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 </ol>
 
-                <!-- Wrapper for slides 这里可放图片、文字h3等 -->
+                 Wrapper for slides 这里可放图片、文字h3等 
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
                         <img src="./img/task8-banner-001.jpg" class="img-responsive" alt="...">
@@ -111,7 +150,7 @@
                     </div>
                 </div>
 
-                <!-- Controls 这是两边的按钮 -->
+                 Controls 这是两边的按钮 
                 <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
@@ -120,7 +159,8 @@
                     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
-            </div>
+            </div> -->
+
         </section>
         <section class="task8-introduce">
             <div class="container">
@@ -402,12 +442,15 @@
             <p class="rights">Copyright &copy; 2015技能树 www.jnshu.com ALL Rights Reserved | 京ICP备135005880号</p>
         </section>
     </div>
-    
+
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script> -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/task8-lunbotu.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <!-- <script type="text/javascript" src="js/task8-lunbotu.js"></script> -->
+    <script type="text/javascript" src="js/task8-ui.js"></script>
 </body>
 
 </html>
