job页面的导航条 tab切换 js实现

--- a/task8/task8-home.html
+++ b/task8/task8-home.html
@@ -62,7 +62,7 @@
                                 <li><a href="./task8-job.html">职业</a></li>
                                 <li><a href="./task8-company.html">推荐</a></li>
 
-                                <!-- ui-search 会影响 boostrap的导航条在 移动端功能 （原因大概在点击 body 隐藏下拉菜单那部分 js代码里 ） --> -->
+                                <!-- ui-search 会影响 boostrap的导航条在 移动端功能 （原因大概在点击 body 隐藏下拉菜单那部分 js代码里 ） -->
                                 <li class="ui-search hidden-xs">
                                     <a href="#" class="ui-search-selected">
                                         <span class="item">关于我们</span>
